--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://amazon-app-wyyd.onrender.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
